@@ -1,8 +1,8 @@
 package com.apollo.scentraapi.service;
 
 import com.apollo.scentraapi.apiPayload.code.status.ErrorStatus;
-import com.apollo.scentraapi.apiPayload.exception.handler.BrandHandler;
-import com.apollo.scentraapi.apiPayload.exception.handler.ProductHandler;
+import com.apollo.scentraapi.apiPayload.exception.handler.BrandException;
+import com.apollo.scentraapi.apiPayload.exception.handler.ProductException;
 import com.apollo.scentraapi.converter.CategoryConverter;
 import com.apollo.scentraapi.converter.ProductConverter;
 import com.apollo.scentraapi.domain.*;
@@ -18,7 +18,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,9 +32,8 @@ public class ProductService {
 
     @Transactional
     public ProductResponse.ProductDto getProduct(Long id) {
-        // 1. 상품 조회 (없으면 예외 발생)
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND));
+                .orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_FOUND));
 
         return ProductConverter.toProductResponse(product);
     }
@@ -45,17 +43,17 @@ public class ProductService {
         List<ProductResponse.ProductListDto> productList = new ArrayList<>();
 
         if (products.isEmpty()) {
-            throw new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND);
+            throw new ProductException(ErrorStatus.PRODUCT_NOT_FOUND);
         }
 
         for (Product product : products) {
-            Long brand_id = product.getBrand().getId();
-            Brand brand = brandRepository.findById(brand_id)
-                    .orElseThrow(() -> new BrandHandler(ErrorStatus.BRAND_NOT_FOUND));
+            Long brandId = product.getBrand().getId();
+            Brand brand = brandRepository.findById(brandId)
+                    .orElseThrow(() -> new BrandException(ErrorStatus.BRAND_NOT_FOUND));
             String brandNameKr = brand.getBrandNameKr();
             String brandNameEn = brand.getBrandNameEn();
-            ProductResponse.ProductListDto product_dto = ProductConverter.toProductListDto(product, brandNameKr, brandNameEn);
-            productList.add(product_dto);
+            ProductResponse.ProductListDto productDto = ProductConverter.toProductListDto(product, brandNameKr, brandNameEn);
+            productList.add(productDto);
         }
         return productList;
     }
@@ -64,38 +62,38 @@ public class ProductService {
     public Product uploadProduct(MultipartFile productImage, MultipartFile detailImage, ProductRequest.ProductUploadDto productUploadDto) {
         String productImageUrl = s3Service.uploadFile(productImage);
         String detailImageUrl = null;
-        if (detailImage != null) detailImageUrl = s3Service.uploadFile(detailImage);
-        Product new_product = ProductConverter.toProduct(productImageUrl, detailImageUrl, productUploadDto);
+        if (detailImage != null) {
+            detailImageUrl = s3Service.uploadFile(detailImage);
+        }
+
+        Product newProduct = ProductConverter.toProduct(productImageUrl, detailImageUrl, productUploadDto);
         Brand brand = brandRepository.findByBrandNameEn(productUploadDto.getBrandNameEn())
                 .orElseGet(() -> brandRepository.findByBrandNameKr(productUploadDto.getBrandNameKr())
-                .orElseThrow(() -> new ProductHandler(ErrorStatus.BRAND_NOT_FOUND)));
-        new_product.setBrand(brand);
-        new_product = productRepository.save(new_product);
+                .orElseThrow(() -> new ProductException(ErrorStatus.BRAND_NOT_FOUND)));
+        newProduct.setBrand(brand);
+        newProduct = productRepository.save(newProduct);
 
         for (String c : productUploadDto.getCategory()) {
             Category category = categoryRepository.findByCategoryNameKr(c)
-                    .orElseThrow(() -> new ProductHandler(ErrorStatus.CATEGORY_NOT_FOUND));
-            CategoryMapping mapping = CategoryConverter.toCategoryMapping(category, new_product);
+                    .orElseThrow(() -> new ProductException(ErrorStatus.CATEGORY_NOT_FOUND));
+            CategoryMapping mapping = CategoryConverter.toCategoryMapping(category, newProduct);
             categoryMappingRepository.save(mapping);
         }
 
-        return new_product;
+        return newProduct;
     }
 
     @Transactional
     public ProductResponse.ProductUpdateResponseDTO updateProduct(Long id, ProductRequest.ProductUpdateRequestDTO request) {
-        // 1. 상품 조회
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND));
+                .orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_FOUND));
 
-        // 2. 브랜드 변경이 있을 경우, 브랜드 찾기
         if (request.getBrandId() != null) {
             Brand brand = brandRepository.findById(request.getBrandId())
-                    .orElseThrow(() -> new BrandHandler(ErrorStatus.BRAND_NOT_FOUND));
-            product.setBrand(brand);  // ✅ 브랜드 정보 업데이트
+                    .orElseThrow(() -> new BrandException(ErrorStatus.BRAND_NOT_FOUND));
+            product.setBrand(brand);
         }
 
-        // 3. 상품 정보 업데이트
         product.update(
                 request.getProductNameKr(),
                 request.getProductNameEn(),
@@ -105,22 +103,20 @@ public class ProductService {
                 request.getTargetGender()
         );
 
-        // 4. 응답 DTO 반환
         return ProductConverter.toProductUpdateResponseDTO(product);
     }
 
     @Transactional
     public ProductResponse.ProductDeleteResponseDTO deleteProduct(Long id) {
-        // 1. 상품 조회 (없으면 예외 발생)
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND));
+                .orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_FOUND));
 
-        // 2. 삭제 수행
         s3Service.deleteImage(product.getProductImage());
-        if (product.getDetailImage() != null) s3Service.deleteImage(product.getDetailImage());
+        if (product.getDetailImage() != null) {
+            s3Service.deleteImage(product.getDetailImage());
+        }
         productRepository.delete(product);
 
-        // 3. 삭제된 상품 정보 반환
         return ProductConverter.toProductDeleteResponseDTO(product);
     }
 
@@ -153,11 +149,12 @@ public class ProductService {
 
     public ProductResponse.ProductLikeDTO addLike(User user, Long productId) {
         Optional<Product> optionalProduct = productRepository.findById(productId);
-        Product product = optionalProduct.orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND));
+        Product product = optionalProduct.orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_FOUND));
 
         Optional<ProductLikes> findProductLikes = productLikeRepository.findByUserAndProduct(user, product);
-        if (findProductLikes.isPresent())
-            throw new ProductHandler(ErrorStatus.PRODUCT_ALREADY_LIKED);
+        if (findProductLikes.isPresent()) {
+            throw new ProductException(ErrorStatus.PRODUCT_ALREADY_LIKED);
+        }
 
         ProductLikes newLike = ProductConverter.toProductLike(product, user);
         productLikeRepository.save(newLike);
@@ -167,17 +164,18 @@ public class ProductService {
 
     public ProductResponse.ProductLikeDTO removeLike(User user, Long productId) {
         Optional<ProductLikes> optionalProductLike = productLikeRepository.findByUserIdAndProductId(user.getId(), productId);
-        ProductLikes productLike = optionalProductLike.orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_LIKED));
+        ProductLikes productLike = optionalProductLike
+                .orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_LIKED));
 
         productLikeRepository.delete(productLike);
         return ProductConverter.toProductLikeDTO(productLike);
     }
     @Transactional(readOnly = true)
-    public List<ProductResponse.ProductListDto> getProductsByCategory(Long category_id) {
-        List<CategoryMapping> mappings = categoryMappingRepository.findByCategoryId(category_id);
+    public List<ProductResponse.ProductListDto> getProductsByCategory(Long categoryId) {
+        List<CategoryMapping> mappings = categoryMappingRepository.findByCategoryId(categoryId);
 
         if (mappings.isEmpty()) {
-            throw new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND); // 예외 처리 추가
+            throw new ProductException(ErrorStatus.PRODUCT_NOT_FOUND);
         }
         return mappings.stream()
                 .map(mapping -> {
@@ -185,17 +183,16 @@ public class ProductService {
                     String brandNameKr = product.getBrand().getBrandNameKr();
                     String brandNameEn = product.getBrand().getBrandNameEn();
                     return ProductConverter.toProductListDto(product, brandNameKr, brandNameEn);
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     public List<ProductResponse.ProductListDto> searchProducts(String keyword) {
-        // 1. 검색어가 null 또는 빈 문자열일 경우 예외 처리
+        // 검색어가 null 또는 빈 문자열일 경우 예외 처리
         if (keyword == null || keyword.trim().isEmpty()) {
-            throw new ProductHandler(ErrorStatus.INVALID_SEARCH_KEYWORD);
+            throw new ProductException(ErrorStatus.INVALID_SEARCH_KEYWORD);
         }
 
-        // 2. 검색 실행
+        // 검색 실행
         List<Product> filteredProducts = productRepository.findAll().stream()
                 .filter(product ->
                         (product.getProductNameKr() != null && product.getProductNameKr().contains(keyword)) ||  // (1) 키워드가 상품명에 포함됨
@@ -206,9 +203,9 @@ public class ProductService {
                 .toList();
 
 
-        // 3. 검색 결과 없을 경우 예외 처리
+        // 검색 결과 없을 경우 예외 처리
         if (filteredProducts.isEmpty()) {
-            throw new ProductHandler(ErrorStatus.PRODUCT_NOT_FOUND);
+            throw new ProductException(ErrorStatus.PRODUCT_NOT_FOUND);
         }
 
         return filteredProducts.stream()
@@ -216,14 +213,12 @@ public class ProductService {
                     String brandNameKr = product.getBrand().getBrandNameKr();
                     String brandNameEn = product.getBrand().getBrandNameEn();
                     return ProductConverter.toProductListDto(product, brandNameKr, brandNameEn);
-                })
-                .collect(Collectors.toList());
-
+                }).toList();
     }
 
     public ProductResponse.ProductLikeDTO isLike(User user, Long productId) {
         Optional<ProductLikes> optionalProductLike = productLikeRepository.findByUserIdAndProductId(user.getId(), productId);
-        ProductLikes productLike = optionalProductLike.orElseThrow(() -> new ProductHandler(ErrorStatus.PRODUCT_NOT_LIKED));
+        ProductLikes productLike = optionalProductLike.orElseThrow(() -> new ProductException(ErrorStatus.PRODUCT_NOT_LIKED));
         return ProductConverter.toProductLikeDTO(productLike);
     }
 }
